# consilium

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CHANGELOG.md  Consilium_v7.6_OpenClaw_Analysis.md  EXPERIMENT_README.md  README_FIX.md  增强措施对比表.md  多智能体协作模式对比实验_完整报告.md  混合模式v3.0设计方案.md  混合模式优化说明.md  生产流水线理论.md
docs/assets/: README.md
src/go/: consilium_v7_6.go
src/python/: consilium_v7_6.py
src/rust/: Cargo.toml  consilium_v7_6.rs
src/typescript/: consilium_v7_6.ts  package.json
