[package]
name = "consilium-v7.6"
version = "7.6.0"
edition = "2021"
description = "Consilium v7.6 - Multi-Agent Decision Engine (Rust Version)"
authors = ["Consilium Team"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
